Fixed contact section having too much padding

--- a/static/styles/curriculum.css
+++ b/static/styles/curriculum.css
@@ -10,10 +10,8 @@ img.icon + h2 {
     margin: 0px;
 }
 
-.section {
-    padding-top: 40px;
-    max-width: 1100px;
-    margin: auto;
+.hero {
+    margin-bottom: 40px;
 }
 
 .block {
